# khaos

./: .gitignore  Cargo.toml  diesel.toml  docker-compose.dev.yml  example.env  readme.md
migrations/2025-04-28-024237_initial_setup/: down.sql  up.sql
migrations/2025-05-06-164626_add-guild-settings/: down.sql  up.sql
src/: config.rs  di.rs  main.rs  schema.rs
src/db/: mod.rs  models.rs  schema.rs
src/discord/: helper.rs  mod.rs
src/discord/commands/: mod.rs  nominate.rs  ping.rs  setup.rs  test.rs
src/discord/events/: mod.rs
src/discord/handling/: mod.rs
src/discord/interactions/: mod.rs  nominations.rs  slash_commands.rs
src/discord/routers/: mod.rs
src/discord/routers/interaction/: handler.rs  mod.rs
src/discord/routers/slash_command/: mod.rs  slash.rs
src/discord/routers/text_command/: command.rs  mod.rs
