[package]
name = "khaos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
deadpool-redis = { version = "0.19.0", features = ["rt_tokio_1"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"