[package]
name = "khaos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.10", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
serde = { version = "1.0.218", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["chrono"] }
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v7", "serde"] }
